<resources>
    <string name="app_name">5个建议</string>
    <string name="info_name_header">Name:</string>
    <string name="info_name_hint">Enter your name here</string>

    <string name="info_height_header">Height:</string>
    <string name="info_height_hint">1.85m Only float or int allowed.</string>

    <string name="info_weight_header">Weight:</string>
    <string name="info_weight_hint">75kg. Only float or int allowed.</string>
    <string name="answer_thin">1. You are too light. You need more fat to protect your organ.\n</string>
    <string name="answer_fit">1. You keep you BMI great. Keep on. Some abs exercise is helpful too. Or do some Dragon-Flag like Bruce Lee.\n</string>
    <string name="answer_fat">1. You are over weight. You need to do more exercise. Buy a pair of new Shoes
        like Brooks, and start running.\n</string>

    <string name="question_salary">Do you think you got enough salary?</string>
    <string name="question_relationship">Are you in a stable relationship?</string>
    <string name="salary_hint_enough">Yes, I can earn my life.</string>
    <string name="salary_hint_no">No, I need some more to live better</string>
    <string name="salary_hint_too_mush">I don\'t know where to spend my money.</string>
    <string name="relationship_hint_yes">Yes</string>
    <string name="relationship_hint_no">No, not yet.</string>

    <string name="answer_salary_low">2. It seems you need some more money. How about gain some Android skills to be an Android Developer and earn your new life?\n</string>
    <string name="answer_salary_fit">2. You are living good. But sometimes we need adventures. Why not try to make an Android App to fill your part-time?\n</string>
    <string name="answer_salary_high">2. Awesome, you are rich! Maybe you want invest on some useful project. Like some Indie Android Developer.</string>
    <string name="answer_relationship_in">3. Wish you love each other day by day. Spend more time with him/her. He/She may be your soul mate.\n</string>
    <string name="answer_relationship_no">3. Enjoy your single time. At last, you will hate each other. Single time is precious.\n</string>

    <string name="question_healthy_food">Which below are health food?</string>
    <string name="healthy_food_fish">fish</string>
    <string name="healthy_food_chicken">chicken</string>
    <string name="healthy_food_nuts">nuts</string>
    <string name="healthy_food_milk">milk</string>
    <string name="healthy_food_cheeseburger">cheese burger</string>
    <string name="healthy_food_friedchicken">fried chicken</string>
    <string name="answer_healthy_food_right">4. Correct, but diversity of food is also important.\n</string>
    <string name="answer_healthy_food_wrong">4. Sorry, why not find some healthy food on YingPai Jianshen?\n</string>
    <string name="question_life_goal">Do you have dream?</string>
    <string name="life_goal_hint_yes">Yes, I had a dream one day.</string>
    <string name="life_goal_hint_no">No, I\'m living in desperate.</string>
    <string name="answer_life_goal_yes">5. Glad to hear that, for life goal really maters. It will guide your life when you\'re confused or under great pressure.
    Keep on moving. Wish you have the courage to get through the difficulties.\n</string>
    <string name="answer_life_goal_no">5. Don\'t be afraid. Try every thing just like Judy did in Zootopia. You are more powerful than you think.\n</string>

    <string name="error_type">You forget to type your weight and height.</string>
    <string name="mail_subject">5 Suggestions to live better.</string>
    <string name="submit">submit</string>
</resources>
